@@ -59,22 +59,22 @@ namespace sbuild
 	OPERATION_RUN        ///< Run a command in an existing session.
       };
 
-  enum error_code
-    {
-      NONE,           ///< No error occured.  Used for detail only.
-      CHROOT_UNKNOWN, ///< Failed to find chroot.
-      CHROOT_LOCK,    ///< Failed to lock chroot.
-      CHROOT_UNLOCK,  ///< Failed to unlock chroot.
-      CHROOT_SETUP,   ///< Setup failed.
-      SIGHUP_SET,     ///< Failed to set SIGHUP handler.
-      SIGHUP_CATCH,   ///< Hangup signal caught.
-      CHILD_FORK,     ///< Failed to fork child.
-      CHILD_WAIT,     ///< Wait for child failed.
-      CHILD_SIGNAL,   ///< Child terminated by signal.
-      CHILD_CORE,     ///< Child dumped core.
-      CHILD_FAIL,     ///< Child exited abnormally (reason unknown)
-      USER_SWITCH     ///< User switching is not permitted.
-    };
+    /// Error codes.
+    enum error_code
+      {
+	CHROOT_UNKNOWN, ///< Failed to find chroot.
+	CHROOT_LOCK,    ///< Failed to lock chroot.
+	CHROOT_UNLOCK,  ///< Failed to unlock chroot.
+	CHROOT_SETUP,   ///< Setup failed.
+	SIGHUP_SET,     ///< Failed to set SIGHUP handler.
+	SIGHUP_CATCH,   ///< Hangup signal caught.
+	CHILD_FORK,     ///< Failed to fork child.
+	CHILD_WAIT,     ///< Wait for child failed.
+	CHILD_SIGNAL,   ///< Child terminated by signal.
+	CHILD_CORE,     ///< Child dumped core.
+	CHILD_FAIL,     ///< Child exited abnormally (reason unknown)
+	USER_SWITCH     ///< User switching is not permitted.
+      };
 
     /// Exception type.
     typedef custom_error<error_code> error;
