@@ -1,3 +1,10 @@
+2006-06-20  Roger Leigh  <rleigh@debian.org>
+
+	* schroot/sbuild-session.h: Reindent error codes.
+
+	* schroot/sbuild-lock.(cc|h):Use the custom_error
+	exception class.
+
 2006-06-19  Roger Leigh  <rleigh@debian.org>
 
 	* schroot/sbuild-chroot.(cc|h), schroot/sbuild-chroot-file.cc,
